--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 MONGODB_URI=mongodb+srv://pratap123:india%40123@cluster0.tc4djpk.mongodb.net/propertypulse?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_DOMAIN = http://localhost:3000
 NEXT_PUBLIC_API_DOMAIN = http://localhost:3000/api
+GOOGLE_CLIENT_ID=1041693676494-7fpnfnm62nf93n3a795rp5cgc60t4vse.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=8h/j3Mz9XFkiNfnnWHqwDwUafDdMuGZFYBFcTtig0KQ=
+
 
 # mongodb+srv://pratap123:india%40123@cluster0.tc4djpk.mongodb.net/
