--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=8h/j3Mz9XFkiNfnnWHqwDwUafDdMuGZFYBFcTtig0KQ=
-
+CLOUDINARY_CLOUD_NAME=pratap-dev
+CLOUDINARY_API_KEY=924584357974364
+CLOUDINARY_API_SECRET=1KnLxYGberkv-OtONld6xr-EEBM
 
 # mongodb+srv://pratap123:india%40123@cluster0.tc4djpk.mongodb.net/
